trying to publish again

--- a/docs/templates/films.html
+++ b/docs/templates/films.html
@@ -1,3 +1,8 @@
+---
+name: films
+url: /films/:id?p=
+controller: FilmsCtrl
+---
 <div class="grid-content film" class="film" ng-show="film" ng-init="crawl = 'false'">
     <h1 class='content-sub'>Episode {{film.episode_id}}</h1>
     <h1 class='content-title'>{{film.title}}</h1>
