--- a/docs/templates/people.html
+++ b/docs/templates/people.html
@@ -1,3 +1,8 @@
+---
+name: people
+url: /people/:id?p=
+controller: PeopleCtrl
+---
 <div class="grid-content person" class="person" ng-show="person">
 	<h1 class='content-title'>{{person.name | capitalize}}</h1>
 	<img ng-show="imageUrl != 'Unknown'" src="{{imageUrl}}" alt="">
