adding routes for ships and vechicles

--- a/client/templates/planets.html
+++ b/client/templates/planets.html
@@ -3,4 +3,4 @@ name: planets
 url: /planets/:id?p=
 controller: PlanetsCtrl
 ---
-<h1 class='content-title'>Planets Coming Soon!</h1>
+<h1 class='content-title'>Patience you must have...</h1>
