--- a/client/assets/scss/_settings.scss
+++ b/client/assets/scss/_settings.scss
@@ -90,13 +90,13 @@
 // $font-weight-bold: bold;
 
 // Application Colors
-$primary-color: #151d2c;
+$primary-color: #000e1a;
 $secondary-color: #fff;
 // $alert-color: #F04124;
 // $info-color: #A0D3E8;
 // $success-color: #43AC6A;
- $warning-color: #e8bb23;
- $dark-color: #0f151f;
+ $warning-color: #02b2c1;
+ $dark-color: #000e1a;
 // $gray: #dfdfdf;
 // $gray-dark: darken($gray, 8);
 // $gray-light: lighten($gray, 8);
