--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -4,7 +4,7 @@ url: /
 ---
 <div class="grid-content">
 
-    <ul class="home-list wrap">
+    <ul class="home-list">
         <li class='tile'>
             <a ui-sref="films">
               <div class="text">
@@ -21,7 +21,7 @@ url: /
                   <h1>People</h1>
                   <p>Learn More</p>
               </div>
-               <img src='https://vignette2.wikia.nocookie.net/mugen/images/a/ad/Luke_Skywalker_Ep7.png/revision/latest?cb=20170504134541' />
+               <img src='http://f.tqn.com/y/scifi/1/W/4/C/0/-/1118037384300px-luke_skywalker_ep6_dvd.jpg' />
                 
             </a>
         </li>
@@ -41,10 +41,33 @@ url: /
                   <h1>Species</h1>
                   <p>Learn More</p>
               </div>
-               <img src='http://www.insidethemagic.net/wp-content/uploads/2017/01/Gial_Ackbar_Resistance_Base.jpg' />
+               <img src='http://screencrush.com/files/2014/05/star-wats-episode-7-chewbacca-first-look.jpg' />
                 
             </a>
         </li>
+        
+        <li class='tile'>
+            <a ui-sref="species">
+              <div class="text">
+                  <h1>Vehicles</h1>
+                  <p>Learn More</p>
+              </div>
+               <img src='https://vignette3.wikia.nocookie.net/starwars/images/c/c9/ATAT-SWFB.jpg/revision/latest?cb=20121226192312' />
+                
+            </a>
+        </li>
+        
+        <li class='tile'>
+            <a ui-sref="species">
+              <div class="text">
+                  <h1>Ships</h1>
+                  <p>Learn More</p>
+              </div>
+               <img src='https://lumiere-a.akamaihd.net/v1/images/millennium-falcon-4_9c006047.jpeg?region=0%2C0%2C800%2C559' />
+                
+            </a>
+        </li>
+        
     </ul>
 </div>
 
