--- a/client/templates/species.html
+++ b/client/templates/species.html
@@ -3,4 +3,4 @@ name: species
 url: /species/:id?p=
 controller: SpeciesCtrl
 ---
-<h1 class='content-title'>Species Coming Soon!</h1>
+<h1 class='content-title'>Patience you must have...</h1>
